sql_engines/mpp/trino/manifests/03_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: trino-coordinator-service
  namespace: __NAMESPACE__
  labels:
    app: trino-coordinator
spec:
  type: ClusterIP
  selector:
    app: trino-coordinator
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 8443
      targetPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: trino-worker-service
  namespace: __NAMESPACE__
  labels:
    app: trino-worker
spec:
  type: ClusterIP
  selector:
    app: trino-worker
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 8443
      targetPort: 8443
