sql_engines/mpp/trino/manifests/07_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trino
  namespace: __NAMESPACE__
  labels:
    app: trino
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-body-size: "256m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - trino.ai.nova.office
      secretName: trino-cert-secret
  rules:
    - host: trino.ai.nova.office
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trino-coordinator-service
                port:
                  number: 8443
